--- a/MarbleGraniteShop/appsettings.json
+++ b/MarbleGraniteShop/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MarbleGraniteShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "workstation id=MarbleGraniteShop.mssql.somee.com;packet size=4096;user id=SureshNakum_SQLLogin_1;pwd=abx98d4gll;data source=MarbleGraniteShop.mssql.somee.com;persist security info=False;initial catalog=MarbleGraniteShop"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MarbleGraniteShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
